[package]
name = "pong"
version = "0.1.0"
authors = ["Jonah Henriksson <33059163+JonahHenriksson@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
rev = "9e6af4cc58e2a7392b2fee4f7d3977c924dd4999"
features = ["nightly","vulkan"]
